--- a/index.html
+++ b/index.html
@@ -1,19 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Aluno</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h1>Cadastro Rápido</h1>
-    <form action="process_cadastro.php" method="POST">
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" required><br>
-        <label for="rm">RM:</label>
-        <input type="text" id="rm" name="rm" required><br>
-        <button type="submit">Iniciar</button>
-    </form>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Quest HTML + CSS Avançado</title>
+
+    <link rel="stylesheet" href="src/CSS/reset.css" />
+    <link rel="stylesheet" href="src/CSS/style.css" />
+    <link rel="stylesheet" href="src/CSS/responsive.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="shortcut icon"
+      href="src/images/favicon-32x32.png"
+      type="image/x-icon"
+    />
+    <script src="https://kit.fontawesome.com/2d801f40ab.js" crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <header class="header">
+      <img src="src/images/logoBilly.png" alt="logo" />
+    </header>
+
+    <main class="main">
+      <div class="image">
+        <img src="src/images/illustration-mockups.svg" alt="" />
+      </div>
+
+      <div class="info">
+        <h1>Build The Community Your Fans Will Love</h1>
+        <p>
+          Huddle re-imagines the way we build communities. You have a voice, but
+          so does your audience. Create connections with your users as you
+          engage in genuine discussion.
+        </p>
+        <a href="cadastro.html">Register</a>
+      </div>
+    </main>
+
+    <footer class="footer">
+      <a href="">
+        <i class="fa-brands fa-facebook"></i>
+      </a>
+
+      <a href="">
+        <i class="fa-brands fa-square-twitter"></i>
+      </a>
+
+      <a href="">
+        <i class="fa-brands fa-instagram"></i>
+      </a>
+    </footer>
+  </body>
 </html>
