--- a/index.html
+++ b/index.html
@@ -1,68 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quest HTML + CSS Avançado</title>
+<html lang="pt-BR">
 
-    <link rel="stylesheet" href="src/CSS/reset.css" />
-    <link rel="stylesheet" href="src/CSS/style.css" />
-    <link rel="stylesheet" href="src/CSS/responsive.css">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bem-vindo ao Enigma</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
+  <link rel="stylesheet" href="src/CSS/reset.css" />
+  <link rel="stylesheet" href="src/CSS/style.css" />
+  <link rel="stylesheet" href="src/CSS/responsive.css">
 
-    <link
-      rel="shortcut icon"
-      href="src/images/favicon-32x32.png"
-      type="image/x-icon"
-    />
-    <script src="https://kit.fontawesome.com/2d801f40ab.js" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <header class="header">
-      <img src="src/images/logoBilly.png" alt="logo" />
-    </header>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="shortcut icon" href="src/images/billylogopreto.png" type="image/x-icon" />
+</head>
 
-    <main class="main">
-      <div class="image">
-        <img src="src/images/illustration-mockups.svg" alt="" />
-      </div>
+<body>
+  <div class="logo-jogo">
+    <a href="index.html">
+      <img src="src/images/billylogopreto.png" alt="Logo Billy" class="billyLogo">
+    </a>
+  </div>
 
-      <div class="info">
-        <h1>Build The Community Your Fans Will Love</h1>
-        <p>
-          Huddle re-imagines the way we build communities. You have a voice, but
-          so does your audience. Create connections with your users as you
-          engage in genuine discussion.
-        </p>
-        <a href="cadastro.html">Register</a>
-      </div>
-    </main>
+  <main class="main">
+    <div class="content">
+      <h1 class="welcome-title">Bem-vindo aos Jogos Quase Mortais</h1>
+      <p class="welcome-description">
+        Você é corajoso o suficiente para desvendar os mistérios? Resolva os enigmas, escolha a imagem correta e conquiste a chave para o código final. Pronto para começar?
+      </p>
+      <a href="enigmas.html" class="start-btn">Iniciar o Jogo</a>
+    </div>
+  </main>
 
-    <footer class="footer">
-      <a href="">
-        <i class="fa-brands fa-facebook"></i>
-      </a>
+  <footer class="footer">
+    <p>© Daniel Alves de Moura, Giovanna Oliveira de Souza, Guilherme Fadel Araujo, Guilherme
+      Gabriel Lopez Cruz, Jacinto dos Santos Cavalcante, Kaua Fabri Françoso, Kauanny de
+      Santana Pinheiro, Lucas Keiti Azuma, Lucas Silva dos Santos, Yasmin Jacinto de Lima.</p>
+  </footer>
+</body>
 
-      <a href="">
-        <i class="fa-brands fa-square-twitter"></i>
-      </a>
-
-      <a href="">
-        <i class="fa-brands fa-instagram"></i>
-      </a>
-    </footer>
-  </body>
 </html>
